flutter/lib/src/ffi/bindings.dart


/// ev_stream ev_generate_stream(ev_context ctx, const char* prompt, const ev_generation_params* params, ev_error_t* error)
typedef EvGenerateStreamNative = Pointer<EvStreamImpl> Function(
  Pointer<EvContextImpl> ctx,
  Pointer<Utf8> prompt,
  Pointer<EvGenerationParams> params,
  Pointer<Int32> error,
);
typedef EvGenerateStreamDart = Pointer<EvStreamImpl> Function(
  Pointer<EvContextImpl> ctx,
  Pointer<Utf8> prompt,
  Pointer<EvGenerationParams> params,
  Pointer<Int32> error,
);

/// char* ev_stream_next(ev_stream stream, ev_error_t* error)
typedef EvStreamNextNative = Pointer<Utf8> Function(
  Pointer<EvStreamImpl> stream,
  Pointer<Int32> error,
);
typedef EvStreamNextDart = Pointer<Utf8> Function(
  Pointer<EvStreamImpl> stream,
  Pointer<Int32> error,
);

/// bool ev_stream_has_next(ev_stream stream)
typedef EvStreamHasNextNative = Bool Function(Pointer<EvStreamImpl> stream);
typedef EvStreamHasNextDart = bool Function(Pointer<EvStreamImpl> stream);

/// void ev_stream_cancel(ev_stream stream)
typedef EvStreamCancelNative = Void Function(Pointer<EvStreamImpl> stream);
typedef EvStreamCancelDart = void Function(Pointer<EvStreamImpl> stream);

/// void ev_stream_free(ev_stream stream)
typedef EvStreamFreeNative = Void Function(Pointer<EvStreamImpl> stream);
typedef EvStreamFreeDart = void Function(Pointer<EvStreamImpl> stream);

// =============================================================================
// Vision Function Types (matching edge_veda.h Vision API)
// =============================================================================

/// void ev_vision_config_default(ev_vision_config* config)
typedef EvVisionConfigDefaultNative = Void Function(
  Pointer<EvVisionConfig> config,
);
typedef EvVisionConfigDefaultDart = void Function(
  Pointer<EvVisionConfig> config,
);

/// ev_vision_context ev_vision_init(const ev_vision_config* config, ev_error_t* error)
typedef EvVisionInitNative = Pointer<EvVisionContextImpl> Function(
  Pointer<EvVisionConfig> config,
  Pointer<Int32> error,
);
typedef EvVisionInitDart = Pointer<EvVisionContextImpl> Function(
  Pointer<EvVisionConfig> config,
  Pointer<Int32> error,
);

/// ev_error_t ev_vision_describe(ev_vision_context ctx, const unsigned char* image_bytes, int width, int height, const char* prompt, const ev_generation_params* params, char** output)
typedef EvVisionDescribeNative = Int32 Function(
  Pointer<EvVisionContextImpl> ctx,
  Pointer<UnsignedChar> imageBytes,
  Int32 width,
  Int32 height,
  Pointer<Utf8> prompt,
  Pointer<EvGenerationParams> params,
  Pointer<Pointer<Utf8>> output,
);
typedef EvVisionDescribeDart = int Function(
  Pointer<EvVisionContextImpl> ctx,
  Pointer<UnsignedChar> imageBytes,
  int width,
  int height,
  Pointer<Utf8> prompt,
  Pointer<EvGenerationParams> params,
  Pointer<Pointer<Utf8>> output,
);

/// void ev_vision_free(ev_vision_context ctx)
typedef EvVisionFreeNative = Void Function(Pointer<EvVisionContextImpl> ctx);
typedef EvVisionFreeDart = void Function(Pointer<EvVisionContextImpl> ctx);

/// bool ev_vision_is_valid(ev_vision_context ctx)
typedef EvVisionIsValidNative = Bool Function(Pointer<EvVisionContextImpl> ctx);
typedef EvVisionIsValidDart = bool Function(Pointer<EvVisionContextImpl> ctx);

/// ev_error_t ev_vision_get_last_timings(ev_vision_context ctx, ev_timings_data* timings)
typedef EvVisionGetLastTimingsNative = Int32 Function(
  Pointer<EvVisionContextImpl> ctx,
  Pointer<EvTimingsData> timings,
);
typedef EvVisionGetLastTimingsDart = int Function(
  Pointer<EvVisionContextImpl> ctx,
  Pointer<EvTimingsData> timings,
);

// =============================================================================
// Native Library Bindings
// =============================================================================

/// FFI bindings for Edge Veda native library
///
/// Provides singleton access to native library functions.
/// All function signatures match edge_veda.h exactly.
class EdgeVedaNativeBindings {
  static EdgeVedaNativeBindings? _instance;
  late final DynamicLibrary _dylib;

  EdgeVedaNativeBindings._() {
    _dylib = _loadLibrary();
    _initBindings();
  }

  /// Get singleton instance
  static EdgeVedaNativeBindings get instance {
    _instance ??= EdgeVedaNativeBindings._();
    return _instance!;
  }

  /// Load the native library based on platform
  DynamicLibrary _loadLibrary() {
    if (Platform.isAndroid) {
      return DynamicLibrary.open('libedge_veda.so');
    } else if (Platform.isIOS) {
      // On iOS, the library is statically linked
      return DynamicLibrary.process();
    } else if (Platform.isMacOS) {
      return DynamicLibrary.open('libedge_veda.dylib');
    } else if (Platform.isLinux) {
      return DynamicLibrary.open('libedge_veda.so');
    } else if (Platform.isWindows) {
      return DynamicLibrary.open('edge_veda.dll');
    } else {
      throw UnsupportedError(
        'Platform ${Platform.operatingSystem} is not supported',
      );
    }
  }

  // ---------------------------------------------------------------------------
  // Version / Error Functions
  // ---------------------------------------------------------------------------

  /// Get the version string of the Edge Veda SDK
  late final EvVersionDart evVersion;

  /// Get human-readable error message for error code
  late final EvErrorStringDart evErrorString;

  // ---------------------------------------------------------------------------
  // Backend Detection Functions
  // ---------------------------------------------------------------------------

  /// Detect the best available backend for current platform
  late final EvDetectBackendDart evDetectBackend;

  /// Check if a specific backend is available
  late final EvIsBackendAvailableDart evIsBackendAvailable;

  /// Get human-readable name for backend type
  late final EvBackendNameDart evBackendName;

  // ---------------------------------------------------------------------------
  // Configuration Functions
  // ---------------------------------------------------------------------------

  /// Get default configuration with recommended settings
  late final EvConfigDefaultDart evConfigDefault;

  // ---------------------------------------------------------------------------
  // Context Management Functions
  // ---------------------------------------------------------------------------

  /// Initialize Edge Veda context with configuration
  late final EvInitDart evInit;

  /// Free Edge Veda context and release all resources
  late final EvFreeDart evFree;

  /// Check if context is valid and ready for inference
  late final EvIsValidDart evIsValid;

  // ---------------------------------------------------------------------------
  // Generation Parameter Functions
  // ---------------------------------------------------------------------------

  /// Get default generation parameters
  late final EvGenerationParamsDefaultDart evGenerationParamsDefault;

  // ---------------------------------------------------------------------------
  // Single-Shot Generation Functions
  // ---------------------------------------------------------------------------

  /// Generate a complete response for given prompt
  late final EvGenerateDart evGenerate;

  /// Free string allocated by Edge Veda
  late final EvFreeStringDart evFreeString;

  // ---------------------------------------------------------------------------
  // Memory Management Functions
  // ---------------------------------------------------------------------------

  /// Get current memory usage statistics
  late final EvGetMemoryUsageDart evGetMemoryUsage;

  /// Set memory limit for context
  late final EvSetMemoryLimitDart evSetMemoryLimit;

  /// Register callback for memory pressure events
  late final EvSetMemoryPressureCallbackDart evSetMemoryPressureCallback;

  /// Manually trigger garbage collection and memory cleanup
  late final EvMemoryCleanupDart evMemoryCleanup;

  // ---------------------------------------------------------------------------
  // Utility Functions
  // ---------------------------------------------------------------------------

  /// Enable or disable verbose logging
  late final EvSetVerboseDart evSetVerbose;

  /// Get last error message for context
  late final EvGetLastErrorDart evGetLastError;

  /// Reset context state (clear conversation history)
  late final EvResetDart evReset;

  // ---------------------------------------------------------------------------
  // Streaming Generation Functions
  // ---------------------------------------------------------------------------

  /// Start streaming generation for given prompt
  late final EvGenerateStreamDart evGenerateStream;

  /// Get next token from streaming generation
  late final EvStreamNextDart evStreamNext;

  /// Check if stream has more tokens available
  late final EvStreamHasNextDart evStreamHasNext;

  /// Cancel ongoing streaming generation
  late final EvStreamCancelDart evStreamCancel;

  /// Free stream handle and release resources
  late final EvStreamFreeDart evStreamFree;

  // ---------------------------------------------------------------------------
  // Vision Functions
  // ---------------------------------------------------------------------------

  /// Get default vision configuration with recommended settings
  late final EvVisionConfigDefaultDart evVisionConfigDefault;

  /// Initialize vision context with VLM model and mmproj
  late final EvVisionInitDart evVisionInit;

  /// Describe an image using the vision model
  late final EvVisionDescribeDart evVisionDescribe;

  /// Free vision context and release all resources
  late final EvVisionFreeDart evVisionFree;

  /// Check if vision context is valid and ready for inference
  late final EvVisionIsValidDart evVisionIsValid;

  /// Get last inference timing data from vision context.
  ///
  /// This binding is resolved lazily because ev_vision_get_last_timings may
  /// not exist in older XCFramework builds. The VisionWorker wraps calls in
  /// try-catch so a lookup failure is gracefully handled.
  EvVisionGetLastTimingsDart get evVisionGetLastTimings {
    _evVisionGetLastTimings ??= _dylib.lookupFunction<
        EvVisionGetLastTimingsNative,
        EvVisionGetLastTimingsDart>('ev_vision_get_last_timings');
    return _evVisionGetLastTimings!;
  }

  EvVisionGetLastTimingsDart? _evVisionGetLastTimings;

  // ---------------------------------------------------------------------------
  // Binding Initialization
  // ---------------------------------------------------------------------------

  void _initBindings() {
    // Version / Error
    evVersion = _dylib.lookupFunction<EvVersionNative, EvVersionDart>(
      'ev_version',
    );
    evErrorString = _dylib.lookupFunction<EvErrorStringNative, EvErrorStringDart>(
      'ev_error_string',
    );

    // Backend detection
    evDetectBackend = _dylib.lookupFunction<EvDetectBackendNative, EvDetectBackendDart>(
      'ev_detect_backend',
    );
    evIsBackendAvailable = _dylib.lookupFunction<EvIsBackendAvailableNative, EvIsBackendAvailableDart>(
      'ev_is_backend_available',
    );
    evBackendName = _dylib.lookupFunction<EvBackendNameNative, EvBackendNameDart>(
      'ev_backend_name',
    );

    // Configuration
    evConfigDefault = _dylib.lookupFunction<EvConfigDefaultNative, EvConfigDefaultDart>(
      'ev_config_default',
    );

    // Context management
    evInit = _dylib.lookupFunction<EvInitNative, EvInitDart>('ev_init');
    evFree = _dylib.lookupFunction<EvFreeNative, EvFreeDart>('ev_free');
    evIsValid = _dylib.lookupFunction<EvIsValidNative, EvIsValidDart>(
      'ev_is_valid',
    );

    // Generation parameters
    evGenerationParamsDefault = _dylib.lookupFunction<
      EvGenerationParamsDefaultNative,
      EvGenerationParamsDefaultDart
    >('ev_generation_params_default');
